fix: paragraph spacing on plh_kids_teens_za theme

--- a/src/theme/themes/plh_kids_kw/_index.scss
+++ b/src/theme/themes/plh_kids_kw/_index.scss
@@ -30,7 +30,8 @@
       font-size-text-title: 28px,
       font-size-text-extra-large: 32px,
 
-      paragraph-spacing: 8px,
+      paragraph-spacing: 12px,
+
       line-height-text-tiny: 18px,
       line-height-text-small: 24px,
       line-height-text-medium: 28px,
